# demo_cookiecutter_rustderivemacro

./: Cargo.toml  Makefile  README.md  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
demo_cookiecutter_rustderivemacro/: all.html  derive.DemoDerive.html  index.html  sidebar-items.js  trait.DemoDerive.html
demo_cookiecutter_rustderivemacro/errors/: enum.DemoDeriveError.html  index.html
demo_cookiecutter_rustderivemacro/prelude/: derive.DemoDerive.html  index.html  sidebar-items.js  trait.DemoDerive.html
demo_cookiecutter_rustderivemacro/prelude/errors/: enum.DemoDeriveError.html  index.html  sidebar-items.js
demo_cookiecutter_rustderivemacro_macros/: Cargo.toml  all.html  derive.DemoDerive.html  index.html  sidebar-items.js
demo_cookiecutter_rustderivemacro_macros/src/: func.rs  lib.rs
demo_cookiecutter_rustderivemacro_types/: Cargo.toml  all.html  index.html  sidebar-items.js  trait.DemoDerive.html
demo_cookiecutter_rustderivemacro_types/errors/: enum.DemoDeriveError.html  index.html
demo_cookiecutter_rustderivemacro_types/src/: errors.rs  lib.rs
demo_cookiecutter_rustderivemacro_types/src/traits/: demo_cookiecutter_rustderivemacro.rs  mod.rs
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  (+1 more)
src/: lib.rs  main.rs  prelude.rs
src/demo_cookiecutter_rustderivemacro/: lib.rs.html  prelude.rs.html
src/demo_cookiecutter_rustderivemacro_macros/: func.rs.html  lib.rs.html
src/demo_cookiecutter_rustderivemacro_types/: errors.rs.html  lib.rs.html
src/tests/: test_build.rs
(+12 files in other folders)
